Fix text alignment in gallery and fix index page padding

--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -1,8 +1,5 @@
 #gallery-header {
     padding-bottom: 0;
-}
-
-#gallery-header h2 {
     text-align: center;
 }
 
